Overlap fix

--- a/frontend/www/css/style.css
+++ b/frontend/www/css/style.css
@@ -15,12 +15,13 @@
 
 td-cards {
   display: block;
+  padding-bottom: 350px;
 }
 
 td-card {
   position: absolute;
   left: 50%;
-  margin-top: 80px;
+  margin-top: 20px;
   margin-bottom: 40px;
   margin-left: -150px;
   width: 300px;
